Fixed the small white gap between video and mission

--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,7 @@ main {
 .hero-container * {
   padding: 0px;
   margin: 0px;
+  display: block;
 }
 
 .hero-container video {
